Fix z-index

--- a/frontend/components/stores/StoresListGroupItem/styles.module.css
+++ b/frontend/components/stores/StoresListGroupItem/styles.module.css
@@ -16,7 +16,7 @@
 
 .container.isSelected {
 	position: relative;
-	z-index: 999;
+	z-index: 100;
 	box-shadow: var(--box-shadow-lg);
 }
 
